Home version uploaded

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         />
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
         <title>Auto Mails Sender</title>
     </head>
     <body>
