--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link type="image/png" sizes="96x96" rel="icon" href="./src/assets/favicon.png">
         <style>
             @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
         </style>
